--- a/STL/2 线程与数据竞争.md
+++ b/STL/2 线程与数据竞争.md
@@ -2,6 +2,12 @@
 
 ------
 
+>**线程与数据竞争**
+>
+>- 执行线程是程序中的控制流，它始于` std::thread::thread `、 `std::async` 或以其他方式所做的顶层函数调用。
+>- 任何线程都能潜在地访问程序中的任何对象（拥有自动或线程局域存储期的对象仍可为另一线程通过指针或引用访问）。
+>- 始终允许不同的执行线程同时访问（读和写）不同的内存位置，而无冲突或同步要求。
+
 ## 1. C++多线程并发 
 
 ##### 	1）创建线程：
@@ -21,4 +27,46 @@ std::thread t4(std::move(t3)); // t4 is now running f2(). t3 is no longer a thre
 > - <font color='green'>`detach()`</font> ：主线程与线程分离，这样他们成为了两个独立的线程遵循 cpu 的时间片调度分配策略。子线程执行完成后会自己释放掉资源。分离后的线程，主线程将对它没有控制权。
 >
 > 调用 <font color='green'>`join()`</font> 会清理线程相关的存储部分，这代表了 <font color='green'>`join()`</font> 只能调用一次。使用 <font color='green'>`joinable()`</font> 来判断 <font color='green'>`join()`</font> 可否调用。同样，<font color='green'>`detach()`</font>也只能调用一次，一旦 <font color='green'>`detach()`</font> 后就无法 <font color='green'>`join()`</font> 了，有趣的是，<font color='green'>`detach()`</font>可否调用也是使用 <font color='green'>`joinable()`</font> 来判断。
+
+
+
+## 2. 内存顺序 `std::memory_order`
+
+>如果不使用任何同步机制（例如 mutex 或 atomic），在多线程中读写同一个变量，那么程序的结果是难以预料的。简单来说，编译器以及 CPU 的一些行为，会影响到C++程序的执行结果
+>
+>- 即使是简单的语句，C++ 也不保证是原子操作。
+>- CPU 可能会调整指令的执行顺序。
+>- 在 CPU cache 的影响下，一个 CPU 执行了某个指令，不会立即被其它 CPU 看见。
+>- Intel x86, x86-64等属于强排序CPU，x86-64的强内存模型总能保证按顺序执行，遵从数据依赖顺序，但PowerPC和ARM是弱排序CPU，有时需要依赖内存栅栏指令。
+>
+>多线程读写同一变量需要使用同步机制，最常见的同步机制就是`std::mutex`和`std::atomic`。然而从性能角度看，通常使用`std::atomic`会获得更好的性能. 
+
+> C++11 提供6 种可以应用于原子变量的内存次序：
+>
+> - memory_order_relaxed,
+> - memory_order_consume,
+> - memory_order_acquire,
+> - memory_order_release,
+> - memory_order_acq_rel,
+> - memory_order_seq_cst
+>
+> 表示四种内存模型：
+>
+> - Relaxed ordering**松弛次序**
+> - Release-Acquire ordering**获取-释放次序**
+> - Release-Consume ordering**数据依赖**
+> - Sequentially-consistent ordering**顺序一致次序**
+
+## 
+
+## 3. C++ 对象内存模型
+
+1）空类对象（一般作为模板的tag来使用）
+
+```
+class A { };
+sizeof（A) = 1
+C++标准要求C++的对象大小不能为0，C++对象必须在内存里面有唯一的地址，
+但又不想浪费太多内存空间，所以标准规定为1byte
+```
 
